# renderproject

./: .gitignore  CMakeLists.txt  CMakeLists.txt.glfw  CMakeLists.txt.imgui  README.md
asserts/models/Elysia_maid/: Elysia.pmx  弓箭1.0.pmx
asserts/models/Karenina/: Karenina.pmx  使用说明 read me(CN,JP,EN).txt
asserts/models/Kiana/: Kiana.pmx  剑.pmx  枪.pmx
asserts/models/KokonaShiki/: KokonaShiki2.pmx
asserts/models/bianka/: Readme.txt  bianka.pmx  bianka1.1.pmx
asserts/models/xinxia/: read me.txt  xinxia1.pmx
asserts/others/: heightmap.save
asserts/shaders/: camera.fs  displacement.comp  fft.comp  gradient.comp  model_animation.fs  model_animation.vs  model_loading.fs  model_loading.vert  model_loading.vs  ocean.fs  ocean.vs  spectrum.comp  terrain.fs  terrain.vs  texture.fs  tn.vs
depends/GLFW/lib/: glfw3.lib
depends/OpenGL/: glextensions.h
depends/glad/include/glad/: glad.h
depends/glad/src/: glad.c
sources/: main.cpp
sources/core/: CMakeLists.txt.core  application.h  qgearray.h  qgemath.cpp  qgemath.h  qgetime.h
sources/core/algorithm/: fft.cpp  fft.h
sources/core/message/: CMakeLists.txt.message
sources/core/utils/: depends_helper.hpp  util.h
sources/function/animation/: CMakeLists.txt.animation  animation.cpp  animation.h  animator.cpp  animator.h  bone.cpp  bone.h  mesh.cpp  mesh.h  model.cpp  model.h
sources/function/render/: CMakeLists.txt.render  geomip_grid.cpp  geomip_grid.h  lighting.h  lod_manager.cpp  lod_manager.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  skybox.cpp  terrain.cpp  terrain.h  terrain_trianglelist.cpp  terrain_trianglelist.h
sources/function/render/ocean/: mesh.cpp  mesh.h  ocean.cpp  ocean.h  qocean.cpp  qocean.h  quadtree.cpp  quadtree.h
sources/message/: CMakeLists.txt.message  message.h
sources/render/: CMakeLists.txt.render  camera.cpp  camera.h  geomip_grid.cpp  geomip_grid.h  mesh.cpp  mesh.h  model.cpp  model.h  ocean.cpp  ocean.h  shader.cpp  shader.h  skybox.cpp  skybox.h  terrain.cpp  terrain.h  terrain_trianglelist.cpp  terrain_trianglelist.h  texture2d.h
sources/resource/: resource.cpp  resource.h
